--- a/index.html
+++ b/index.html
@@ -8,14 +8,29 @@
     <body>
         <header>
             <nav class="barra">
-                <img src="./logo.png" alt="logo JC" class="logo">
                 <ul class="lista">
-                <li> <a href="#">Inicio</a></li>
-                <li> <a href="#">Productos</a></li>
-                <li> <a href="#">Nosotros</a></li>
-                <li> <a href="#">Contacto</a></li>
+                <li class="options"> <a href="#">Inicio</a></li >
+                <li class="options"> <a href="#">Productos</a></li >
+                <li class="options"> <a href="#">Nosotros</a></li >
+                <li class="options"> <a href="#">Contacto</a></li >
                 </ul>
             </nav>
+            <img src="./logo-paraprevia.png" alt="logo JC" class="logo">
         </header>
+        <section class="portada">
+            <div class="div1">
+                <h2 class="font-hero">ASEGURATE LA PREVIA CON NUESTROS COMBOS</h2>
+                <P class="font-hero">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero aspernatur omnis temporibus? 
+                    Quaerat rem quam eaque, repellendus natus autem molestiae voluptatum beatae ipsa et ab porro, 
+                    culpa quas, repellat minus.</P>
+                <div class="button-hero">
+                    <button>INGRESAR</button>
+                    <button>REGISTRARSE</button>
+                </div>
+            </div>
+            <div class="fondo-hero">
+
+            </div>
+        </section>
     </body>
 </html>
